--- a/custom_components/octune/manifest.json
+++ b/custom_components/octune/manifest.json
@@ -5,6 +5,7 @@
   "issue_tracker": "https://github.com/pascalberski/ha-nhqm-octune/issues",
   "dependencies": [],
   "version": "0.0.2",
+  "iot_class": "local_polling",
   "codeowners": [
     "@pascalberski"
   ],
